2012-02-28  Steffen Neumann  <sneumann@ipb-halle.de>	

	* src/RcppRamp.cpp: Change the (temporary) Vectors from STL
	to Rcpp::*Vector for reduced memory footprint
	
2011-12-14  Steffen Neumann  <sneumann@ipb-halle.de>

	* Updated to pwiz r3148

2011-11-24  Steffen Neumann  <sneumann@ipb-halle.de>
	* Fixed linking of NetCDF with previous help from 
	  Dan Tenenbaum and Martin Morgan.
	
2011-09-16 Laurent Gatto <lg390@cam.ac.uk>
	* Changed é to \'e in mzR.bib.

2011-09-07 Laurent Gatto <lg390@cam.ac.uk>
	* temporary fixed the 'could not find function "getClass"' warning 
	  adding require("methods", ... ) to .onLoad 
	  (see http://comments.gmane.org/gmane.comp.lang.r.rcpp/2140)
	  but this produces a note about 'Package startup functions should 
	  not change the search path.' But adding methods to the depends 
  	  fiels, as advertised in .onAttach, does not fix the original 
	  warning.
	* Bump version number to 0.99.2 to track changes.

2011-08-10  Steffen Neumann  <sneumann@ipb-halle.de>
	* Temporary Fix for "unable to find ... for function "peaks"
	  by explicitely specifying mzR:: namespace
	* Bump version for resubmission to BioC
	
2011-08-09  Steffen Neumann  <sneumann@ipb-halle.de>
	* Minor fixes in documentation
	* Bump version for resubmission to BioC

2011-08-01  Steffen Neumann  <sneumann@ipb-halle.de>
	* Added header(), peaks(), length()
	and show() for netCDF. This passes all unit tests 
	for a modified version of xcms, closing Issue #15

2011-07-22  Steffen Neumann  <sneumann@ipb-halle.de>
	* Non-functional support for CDF

2011-07-11 Laurent Gatto <lg390@cam.ac.uk>
	* simplified show method
	* rewrote runInfo in R
	* Misc changes in doc and vignette
	* bumped version to 0.5.5
	
2011-07-08 Steffen Neumann <sneumann@ipb-halle.de>
	* fixed Windows, checked for x64
	* bumped version to 0.5.4
	
2011-07-05 Laurent Gatto <lg390@cam.ac.uk>
	* small doc and vignette updates
	* peaks("mzRramp","missing") always returns a list 